# dm_robotics

./: CITATION.cff  README.md  build.sh
cpp/: CMakeLists.txt  requirements_external.txt  setup.py
cpp/cmake/: FindOrFetch.cmake
cpp/controllers/: CMakeLists.txt  README.md
cpp/controllers/lsqp/: CMakeLists.txt  README.md
cpp/controllers/lsqp/include/dm_robotics/controllers/lsqp/: cartesian_6d_to_joint_velocity_mapper.h  cartesian_6d_velocity_direction_constraint.h  cartesian_6d_velocity_direction_task.h  cartesian_6d_velocity_task.h  collision_avoidance_constraint.h  joint_acceleration_constraint.h  joint_position_limit_constraint.h  joint_velocity_filter.h  test_utils.h
cpp/controllers/lsqp/src/: cartesian_6d_to_joint_velocity_mapper.cc  cartesian_6d_velocity_direction_constraint.cc  cartesian_6d_velocity_direction_task.cc  cartesian_6d_velocity_task.cc  collision_avoidance_constraint.cc  joint_acceleration_constraint.cc  joint_position_limit_constraint.cc  joint_velocity_filter.cc  test_utils.cc
cpp/controllers/lsqp/tests/: cartesian_6d_to_joint_velocity_mapper_test.cc  cartesian_6d_velocity_direction_constraint_test.cc  cartesian_6d_velocity_direction_task_test.cc  cartesian_6d_velocity_task_test.cc  collision_avoidance_constraint_test.cc  integration_test.cc  joint_acceleration_constraint_test.cc  joint_position_limit_constraint_test.cc  joint_velocity_filter_test.cc
cpp/controllers_py/: CMakeLists.txt  README.md  cartesian_6d_to_joint_velocity_mapper.cc  cartesian_6d_to_joint_velocity_mapper_example.py  cartesian_6d_to_joint_velocity_mapper_python_helpers.cc  cartesian_6d_to_joint_velocity_mapper_python_helpers.h  cartesian_6d_to_joint_velocity_mapper_test.py  joint_velocity_filter.cc  joint_velocity_filter_example.py  joint_velocity_filter_python_helpers.cc  joint_velocity_filter_python_helpers.h  joint_velocity_filter_test.py  pybind_utils.cc  pybind_utils.h
cpp/least_squares_qp/: CMakeLists.txt  README.md
cpp/least_squares_qp/common/: CMakeLists.txt
cpp/least_squares_qp/common/include/dm_robotics/least_squares_qp/common/: box_constraint.h  identity_constraint.h  identity_constraint_union.h  identity_task.h  math_utils.h  minimize_norm_task.h
cpp/least_squares_qp/common/src/: box_constraint.cc  identity_constraint_union.cc  identity_task.cc  math_utils.cc
cpp/least_squares_qp/common/tests/: box_constraint_test.cc  identity_constraint_union_test.cc  identity_task_test.cc  integration_test.cc  minimize_norm_task_test.cc
cpp/least_squares_qp/core/: CMakeLists.txt
cpp/least_squares_qp/core/include/dm_robotics/least_squares_qp/core/: lsqp_constraint.h  lsqp_stack_of_tasks_solver.h  lsqp_task.h  lsqp_task_hierarchy.h  utils.h
cpp/least_squares_qp/core/src/: lsqp_stack_of_tasks_solver.cc  lsqp_stack_of_tasks_solver_impl.cc  lsqp_stack_of_tasks_solver_impl.h
cpp/least_squares_qp/core/tests/: lsqp_stack_of_tasks_solver_test.cc
cpp/least_squares_qp/examples/: CMakeLists.txt  common_example.cc  core_example.cc
cpp/least_squares_qp/testing/: CMakeLists.txt
cpp/least_squares_qp/testing/include/dm_robotics/least_squares_qp/testing/: matchers.h
cpp/mujoco/: CMakeLists.txt  README.md
cpp/mujoco/cmake/: defs.h.in
cpp/mujoco/include/dm_robotics/mujoco/: mjlib.h  test_with_mjlib.h  test_with_mujoco_model.h  types.h  utils.h
cpp/mujoco/src/: mjlib.cc  test_with_mjlib.cc  test_with_mujoco_model.cc  utils.cc
cpp/mujoco/tests/: mjlib_test.cc  test_with_mjlib_test.cc  test_with_mujoco_model_test.cc  utils_test.cc
cpp/support/: CMakeLists.txt
cpp/support/include/dm_robotics/support/: logging.h  status-matchers.h  status_macros.h
py/agentflow/: MANIFEST.in  README.md  __init__.py  action_spaces.py  action_spaces_test.py  composite_action_space_test.py  core.py  decorators.py  requirements.txt  requirements_external.txt  run_tests.py  setup.py  spec_utils.py  spec_utils_test.py  subtask.py  subtask_test.py  testing_functions.py  testing_functions_test.py  tox.ini  tutorial.ipynb  util.py
py/agentflow/docs/: components.md  control_flow.md  examples.md
py/agentflow/examples/: direct_dispatch_workflow.py  environment_dispatch_workflow.py  examples_test.py
py/agentflow/loggers/: print_logger.py  subtask_logger.py  subtask_logger_test.py  types.py  utils.py  utils_test.py
py/agentflow/options/: basic_options.py  basic_options_test.py
py/agentflow/preprocessors/: observation_transforms.py  observation_transforms_test.py  rewards.py  rewards_test.py  timestep_preprocessor.py  timestep_preprocessor_test.py
py/agentflow/rendering/: graphviz_renderer.py  (+5 more)
py/geometry/: README.md  geometry.py  geometry_test.py  joint_angles_distribution.py  mujoco_physics.py  observation_physics.py  observation_physics_test.py  pose_distribution.py  pose_distribution_test.py  requirements.txt  requirements_external.txt  setup.py  tox.ini
py/integration_test/: generate_requirements_txt.py  requirements_external.txt  tox.ini
py/manipulation/: MANIFEST.in  README.md  requirements.txt  requirements_external.txt  requirements_test.txt  run_tests.py  setup.py  tox.ini
py/moma/: MANIFEST.in  README.md  __init__.py  action_spaces.py  action_spaces_test.py  base_task.py  base_task_test.py  effector.py  entity_composer.py  entity_initializer.py  initializer.py  moma_option.py  moma_option_test.py  moma_tutorial.ipynb  prop.py  requirements.txt  requirements_external.txt  robot.py  run_tests.py  scene_initializer.py  sensor.py  setup.py  subtask_env.py  subtask_env_builder.py  subtask_env_test.py  subtask_test.py  tox.ini
py/transformations/: README.md  __init__.py  _transformations.py  _transformations_quat.py  _types.py  requirements.txt  setup.py  tox.ini  transformations.py  transformations_test.py
py/vision/: README.md  blob_detector.py  blob_tracker_object_defs.py  blob_triangulation_node.py  config_blob_detector.py  config_blob_triangulation.py  detector.py  detector_node.py  launch_blob_detector.py  launch_blob_triangulation.py  robot_config.py  ros_utils.py  ros_utils_test.py  triangulation.py  triangulation_test.py  types.py  utils.py  utils_test.py
(+289 files in other folders)
